2020-07-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3081.c:
	  Fix bug #3081.

2020-07-10 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/_memmove.c
	  Small optimization of generic memmove() implementation

2020-07-08 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/itoa.c
	  Add tests for _uitoa() and _itoa()
	* support/regression/tests/ltoa.c
	  Add tests for _ultoa() and _ltoa()

2020-07-06 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c
	  src/ds390/main.c
	  src/mcs51/main.c
	  src/pdk/main.c
	  src/stm8/main.c
	  src/port.h
	  src/z80/main.c
	  src/z80/peep.c
	  src/z80/peep.h
	  src/z80/peeph-z80.def
	  Implement RFE #683: Add canSplitReg peephole constraint

2020-07-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c:
	  Document some design choices in memory function tests.

2020-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3079.c:
	  Fix bug #3079.

2020-07-04 Sergey Belyashov <sergey.belyashov@gmail.com>
	* src/SDCCpeeph.c
	  Implement RFE #661: Add newLabel peephole optimizer constraint

2020-07-03 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c
	  src/port.h
	  src/z80/peep.c
	  src/z80/peep.h
	  Add 'unordered' support to canJoinRegs peephole constraint

2020-07-03 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c
	  src/z80/peeph-z80.def
	  Implement RFE #684

2020-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc.c:
	  Improve __sfr ^ with literal.

2020-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use rlca instead of rlc a, RFE #686.
	* src/pdk/gen.c:
	  Improve read from literal pointer.
	* src/SDCCopt.c:
	  Fix bug #3075.
	* src/pdk/ralloc.c:
	  Improve bit set/reset for I/O.

2020-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3040.c: